# papers-without-code

./: .buildinfo  .cookiecutter.yaml  .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Justfile  README.md  contributing.html  eda.html  genindex.html  index.html  installation.html  modules.html  objects.inv  papers_without_code.app.html  papers_without_code.bin.html  papers_without_code.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  papers_without_code.app.doctree  papers_without_code.bin.doctree  papers_without_code.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/papers_without_code/: custom_types.html  example.html  grobid.html  processing.html  search.html  types.html
_modules/papers_without_code/app/: views.html
_sources/: installation.rst.txt  modules.rst.txt  papers_without_code.app.rst.txt  papers_without_code.bin.rst.txt  papers_without_code.rst.txt
_static/: documentation_options.js
data/: README.md  annotated.csv  annotation-ready.csv  create-annotation-ready-data.py  eda.ipynb  requirements.txt
docs/: conf.py  index.rst
papers_without_code/: __init__.py  custom_types.py  grobid.py  processing.py  search.py  types.py
papers_without_code/app/: __init__.py  package-lock.json  package.json  views.py
papers_without_code/app/static/: loader.css  protocol-components.min.css  protocol-components.min.css.map  protocol-navigation.min.js  protocol.min.css  protocol.min.css.map  search-process.js
papers_without_code/app/templates/: base.html  index.html  search-doi-not-found.html  search-success.html  search.html
papers_without_code/tests/: test_example.py
scripts/: cache-sentence-transformers-model.py
