# package build
# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# package basics
# https://peps.python.org/pep-0621/
[project]
name = "papers-without-code"
description = "A package (and website) to automatically attempt to find the code associated with a paper."
keywords = []
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
  { email = "evamaxfieldbrown@gmail.com", name = "Eva Maxfield Brown" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
dependencies = [
  "backoff~=2.2",
  "beautifulsoup4~=4.11",
  "dataclasses-json~=0.5",
  "flask~=2.2",
  "ghapi~=1.0",
  "keybert~=0.7",
  "python-dotenv~=0.21.0",
  "requests~=2.28",
  "semanticscholar==0.3.2",
  "sentence-transformers~=2.2",
]

[project.urls]
Homepage = "https://github.com/evamaxfield/papers-without-code"
"Bug Tracker" = "https://github.com/evamaxfield/papers-without-code/issues"
Documentation = "https://evamaxfield.github.io/papers-without-code"
"User Support" = "https://github.com/evamaxfield/papers-without-code/issues"

# extra dependencies
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
grobid = [
  "docker~=6.0",
  "grobid-client-python==0.0.4",
  
  "pandas~=1.0",
  "xmltodict~=0.13",
]
lint = [
  "black>=22.3.0",
  "check-manifest>=0.48",
  "flake8>=5.0.4",
  "flake8-debugger>=3.2.1",
  "Flake8-pyproject>=1.1.0",
  "flake8-typing-imports>=1.9.0",
  "isort>=5.7.0",
  "mypy>=0.790",
  "pre-commit>=2.20.0",
  "types-requests~=2.28",
]
test = [
  "coverage>=5.1",
  "pytest>=5.4.3",
  "pytest-cov>=2.9.0",
  "pytest-raises>=0.11",
]
docs = [
  # Sphinx + Doc Gen + Styling
  "m2r2>=0.2.7",
  "Sphinx>=4.0.0",
  "furo>=2022.4.7",
  # Extensions
  "numpydoc",
  "sphinx-copybutton",
  # TODO: Pins
  "docutils>=0.18,<0.19",
  # EDA Analysis Conversion
  "jupyterlab",
  "nbconvert",
  "seaborn",
]
dev = [
  "ipython>=8.4.0",
]

# entry points
# https://peps.python.org/pep-0621/#entry-points
[project.entry-points."console_scripts"]
pwoc = "papers_without_code.bin.pwoc:main"
pwoc-server = "papers_without_code.bin.pwoc_server:main"
pwoc-web-app = "papers_without_code.bin.pwoc_app:main"

# build settings
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["*docs/*", "*tests/*", "**/node_modules/**"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "py.typed", "*.css", "*html", "*js", "*.css.map"]

# tools
[tool.black]
line-length = 88

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
use_parentheses = true

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
  ".editorconfig",
  ".pre-commit-config.yaml",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "Justfile",
  ".cookiecutter.yaml",
  "*docs/**",
  "*data/*",
  ".dockerignore",
  ".gcloudignore",
  "Dockerfile",
  "package-lock.json",
  "package.json",
  "**/node_modules/**"
]

[tool.mypy]
files = "papers_without_code/*.py"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true

# https://flake8.pycqa.org/en/latest/user/options.html
# https://github.com/john-hen/Flake8-pyproject
[tool.flake8]
max-line-length = 88
ignore = "E203,E402,W291,W503"
min-python-version = "3.8.0"
per-file-ignores = [
  "__init__.py:F401",
]